--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     }
   ],
   "start_url": ".",
-  "display": "fullscrenn",
+  "display": "fullscreen",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
